# Pddm

./: README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/tui/: event.rs  layout.rs  mod.rs  mod.rs.old  state.rs  tui.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/disk/: local.rs  mod.rs  provider.rs  smart.rs
core/src/disk/os/: linux.rs  mac.rs  windows.rs
core/src/partition/: local.rs  mod.rs  provider.rs  smart.rs
core/src/partition/os/: mod.rs  windows.rs
core/src/utils/: checker.rs  convert.rs  errors.rs  free_space_manager.rs  fsid_manager.rs  gpt.rs  guid.rs  legacy_ebr.rs  mod.rs  numstr.rs  parser.rs  partition_manager.rs  pending.rs  platform.rs  types.rs  win_mount.rs
core/src/utils/check/: crc.rs  free_space.rs
core/src/utils/core/: chs.rs
core/src/utils/diskio/: linux.rs  macos.rs  mod.rs  types.rs
core/src/utils/fs/: format.rs
core/src/utils/gpt/: gpt.rs  guid_manager.rs
core/src/utils/io/: core.rs  mod.rs  windows.rs
core/src/utils/legacy/: legacy_mbr.rs
core/src/utils/manager/: manager.rs
core/src/utils/state/: manager.rs
core/src/utils/types/: base.rs  convert.rs  ebr.rs  fsid.rs  gpt.rs  guid.rs  info.rs  mbr.rs  mod.rs  partition.rs  volume.rs
