[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
pddm_core = { path = "../core" }
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.29.0"
windows = { version = "0.54", features = [
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
] }
