[package]
name = "pddm_core"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.35.0"
wmi = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_SystemInformation",
] }
